fix(Drawer): z-index

--- a/packages/components/src/Drawer/Drawer.scss
+++ b/packages/components/src/Drawer/Drawer.scss
@@ -23,6 +23,8 @@ $tc-action-bar-background-color: lighten($alto, 5%) !default;
 	bottom: 0;
 	box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.3);
 	width: 50vw;
+	/** should always stay lower than dialog z-index wich is set at 1040 */
+	z-index: 100;
 }
 
 @media (min-width: $screen-md-min) and (max-width: $screen-md-max) {
